grammar.js
        source_file: $ => repeat($._line),
        _newline: _ => /\r?\n/,
        _line: $ => prec("_line", seq(
            opt(pick(
                $.contextual_symbol,
                $.contextual_sequence,
                $.label_assignment,
                $._label,
                $._code_unit,
                [$._label, $._code_unit],
            )),
            $._EOL
        )),
        block: $ => repeat1($._line),
    },
    symbols: {
        identifier: _ => /(\.)?[a-zA-Z_][a-zA-Z0-9_@\$]*/,

        _single_symbol: $ => prec("_single_symbol", choice(
            $.identifier,
            prec(2, $.ident_call)
        )),
        _symbol: $ => prec("_symbol", choice(
            $._single_symbol,
            $.qualified_symbol,
        )),
        contextual_symbol: $ => prec("contextual_symbol", $._single_symbol),
        contextual_sequence: $ => prec("contextual_sequence",
            seq(
                $._single_symbol,
                $._symbol,
                opt($._macro_arguments)
            )
        ),

        qualified_symbol: $ => seq(
            opt(
                alias("#", $.global_scope),
                "::"
            ),
            $._single_symbol,
            rep1("::", $._single_symbol),
        ),

        x: _ => caseless("x"),
        y: _ => caseless("y"),
        comment: _ => immediate(
            ";",
            field("contents", /.*?/)
        ),
        c_comment: _ => immediate(
            field("left", "/*"),
            field("contents", /[^(\*\/)]*?/),
            field("right", "*/"),
            /\r?\n/
        ),
    },
    statements: {
        _assignable_to: $ => choice(
            $._symbol,
            $.PC
        ),

        assignment_statement: $ => seq(
            field("left", $._assignable_to),
            "=",
            field("right", $._expression)
        )
    },
    expressions: {
        _expression: $ => choice(
            prec(-1, seq("(", $._expression, ")")),
            $._literal,
            $.pseudo_variable,
            $.pseudo_function_call,
            $._symbol,
            $.unary_expression,
            $.binary_expression,
            $.cheap_label,
            $.unnamed_label_plus,
            $.unnamed_label_minus,
            $.PC
        ),
        expression_list: $ => delimited($._expression, ","),
        plus: _ => "+",
        minus: _ => "-",
        unary_expression: $ => choice(
            prec("unary_ops", seq(
                field("operator", choice($.plus, $.minus, $.tilde, $.LT, $.GT, $.caret, $.bitnot, $.lobyte, $.hibyte, $.bankbyte)),
                field("operand", $._expression)

            )),
            prec("boolean_not", seq(
                field("operator", choice($.bang, $.dot_not)),
                field("operand", $._expression)

            )),
        ),

        unary_operator: $ => choice(
            prec("unary_ops", choice($.plus, $.minus, $.tilde, $.LT, $.GT, $.caret, $.bitnot, $.lobyte, $.hibyte, $.bankbyte)),
            prec("boolean_not", choice($.bang, $.dot_not)),
        ),
        binary_expression: $ => prec.right(choice(
            prec("muldiv", seq(
                field("left", $._expression),
                field("operator", choice($.star, $.slash, $.ampersand, $.caret, $.LTLT, $.GTGT, $.dot_mod, $.bitand, $.bitxor, $.shl, $.shr),),
                field("right", $._expression),
            )),
            prec("addsub", seq(
                field("left", $._expression),
                field("operator", choice($.plus, $.minus, $.pipe, $.bitor)),
                field("right", $._expression),
            )),
            prec("comparison_ops", seq(
                field("left", $._expression),
                field("operator", choice($.equals, $.LTGT, $.LT, $.GT, $.LTE, $.GTE)),
                field("right", $._expression),
            )),
            prec("boolean_and_xor", seq(
                field("left", $._expression),
                field("operator", choice($.ampersand_ampersand, $.dot_and, $.dot_xor)),
                field("right", $._expression),
            )),
            prec("boolean_or", seq(
                field("left", $._expression),
                field("operator", $.dot_or),
                field("right", $._expression),
            )),
        )),
        binary_operator: $ => choice(
            prec("muldiv", choice($.star, $.slash, $.ampersand, $.caret, $.LTLT, $.GTGT, $.dot_mod, $.bitand, $.bitxor, $.shl, $.shr)),
            prec("addsub", choice($.plus, $.minus, $.pipe, $.bitor)),
            prec("comparison_ops", choice($.equals, $.LTGT, $.LT, $.GT, $.LTE, $.GTE)),
            prec("boolean_and_xor", choice($.ampersand_ampersand, $.dot_and, $.dot_xor)),
            prec("boolean_or", $.dot_or),
        ),
        mnemonic: _ => caseless(strings.mnemonics.all),
        instruction: $ => prec.right(3,
            seq(
                field("mnemonic", $.mnemonic),
                optional_field("address", $._addressing_mode)
            )
        ),
    },
    labels: {
        label_declaration: $ => prec.left(2,
            seq(
                field("name", $._single_symbol),
                ":"
            )
        ),
        cheap_label: $ => seq(
            choice("@", "?"),
            $._single_symbol
        ),
        cheap_label_declaration: $ => prec.left(2,
            seq(
                field("name", $.cheap_label),
                opt(":")
            )
        ),

        unnamed_label: _ => ":",
        unnamed_label_plus: $ => /:\++/,
        unnamed_label_minus: $ => /:-+/,
    },
    literals: {
        _dollar_hex: _ => immediate(
            field("base_symbol", "$"),
            field("digits", /[a-fA-F0-9]+(_?[a-fA-F0-9]+)*/)
        ),
        _h_hex: _ => immediate(
            field("digits", /[a-fA-F0-9]+(_?[a-fA-F0-9]+)*/),
            field("base_symbol", /[hH]/),
        ),
        hex_literal: $ => choice(
            $._dollar_hex,
            $._h_hex,
        ),
        decimal_literal: _ => field("digits", /[0-9]+(_?[0-9]+)*/),
        string_literal: $ => choice(
            immediate(
                '"',
                field("contents",
                    repeat(choice(
                        "\\\\", // \\
                        "\\'", // \'
                        "\\\"", // \""
                        "\\t", // \t
                        "\\r", // \r
                        "\\n", // \n
                        /\\x[0-9A-F]{2}/, // \x01, \x9A, \xEF, ...
                        /[^"\n]/,
                    ))
                ),
                '"'
            ),
            immediate(
                "'",
                field("contents",
                    repeat(choice(
                        "\\\\", // \\
                        "\\'", // \'
                        "\\\"", // \""
                        "\\t", // \t
                        "\\r", // \r
                        "\\n", // \n
                        /\\x[0-9A-F]{2}/, // \x01, \x9A, \xEF, ...
                        /[^'\n]/,
                    ))
                ),
                "'"
            ),
        ),
    },
    pseudos: {
        nominal_control_command: $ => prec.right(
            seq(
                field("name", caseless_alias(strings.commands.nominal, $.command)),
                optional_field("arguments", $.expression_list)
            )
        ),
        condes_statement: $ => seq(
            caseless_alias(".condes", $.command),
            field("name", $._symbol),
            ",",
            field(
                "type",
                choice(
                    $._expression,
                    // /[0-6]/,
                    caseless_alias([
                        "constructor",
                        "destructor"
                    ], $.contextual_keyword)
                )
            ),
            opt(
                ',',
                field("priority", $._expression)
            )
        ),

        if_statement: $ => seq(
            field(
                "if_type",
                alias($.if_keyword, $.command)
            ),
            optional_field("condition", $._expression),
            $._newline,
            optional_field("body", $.block),
            repeat($.elseif),
            optional($.else),
            caseless_alias(".endif", $.command)
        ),
        else: $ => seq(
            caseless_alias(".else", $.command),
            $._newline,
            optional_field("body", $.block)
        ),
        elseif: $ => seq(
            caseless_alias(".elseif", $.command),
            field("condition", $._expression),
            $._newline,
            optional_field("body", $.block)),

        _macro_arguments: $ => choice(
            $._optionally_curly_expression,
            seq(
                opt($._optionally_curly_expression),
                delimited($.comma, opt($._optionally_curly_expression)),
                opt($._optionally_curly_expression),
            )),
        macro_arguments: $ => $._macro_arguments,
        macro_invocation: $ => seq(
            field("name", $._symbol),
            opt($.macro_arguments),
        ),
        comma: _ => ",",

        repeat_block: $ => seq(
            caseless_alias(".repeat", $.command),
            field("iterations", $._expression),
            opt(
                ",",
                field("iterator", $._single_symbol)
            ),
            $._newline,
            optional_field("body", $.block),
            caseless_alias([".endrepeat", ".endrep"], $.command)
        ),

        set_statement: $ => seq(
            field("left", $._symbol),
            caseless_alias(".set", $.command),
            field("right", $._expression),
        ),

        union_declaration: $ => seq(
            caseless_alias(".union", $.command),
            optional_field("name", $._single_symbol),
            $._newline,
            optional_field("body", alias($.union_struct_block, $.block)),
            caseless_alias(".endunion", $.command)
        ),

        union_struct_member: $ => prec(3, seq(
            optional_field("name", $._single_symbol),
            field("size", $.storage_allocator),
            optional_field("multiplier", $._expression),
        )),
        storage_allocator: $ => prec(2, caseless(strings.commands.storageAllocators),)
    },
    addressing: {
        _addressing_mode: $ => prec(3, choice(
            $.absolute_address,
            $.immediate_mode,
            $.indexed_x,
            $.indexed_y,
            $.indirect_x,
            $.indirect_y,
            $.unnamed_label_plus,
            $.unnamed_label_minus,
        )),
        absolute_address: $ => $._expression,
        immediate_mode: $ => seq("#", $._expression),
        indexed_x: $ => seq($._expression, ",", $.x),
        indexed_y: $ => seq($._expression, ",", $.y),
        indirect_x: $ => pick(
            ["(", $._expression, ",", $.x, ")"],
            ["[", $._expression, ",", $.x, "]"],
        ),
        indirect_y: $ => pick(
            ["(", $._expression, ")", ",", $.y],
            ["[", $._expression, "]", ",", $.y],
        ),
    },
};

module.exports = grammar_();
