corpus/comments.test
==================
Comments
==================

;This be a comment
; Also a comment

/**/

; ...

/* ;idk */

; ...

/* a */


---

(source_file
  (comment)
  (comment)
  (c_comment)
  (comment)
  (c_comment)
  (comment)
  (c_comment))
