corpus/control-commands/exceptional/features.test
================================================================================
Features Control-Commands
================================================================================

.autoimport +
.autoimport -
.case +
.case -
.linecont +
.linecont -

--------------------------------------------------------------------------------

(source_file
  (feature_toggle_command
    (command)
    quantifier: (plus))
  (feature_toggle_command
    (command)
    quantifier: (minus))
  (feature_toggle_command
    (command)
    quantifier: (plus))
  (feature_toggle_command
    (command)
    quantifier: (minus))
  (feature_toggle_command
    (command)
    quantifier: (plus))
  (feature_toggle_command
    (command)
    quantifier: (minus)))
