corpus/control-commands/exceptional/repeat.test
================================================================================
.repeat command
================================================================================

.repeat 1
    ; ...
.endrepeat

.repeat 1, an_identifier
    ; ...
.endrepeat

--------------------------------------------------------------------------------

(source_file
  (repeat_block
    (command)
    iterations: (decimal_literal)
    (comment)
    body: (block)
    (command))
  (repeat_block
    (command)
    iterations: (decimal_literal)
    iterator: (identifier)
    (comment)
    body: (block)
    (command)))
