corpus/control-commands/exceptional/union.test
================================================================================
.union command
================================================================================

.union Foo
    foo .word
    .byte
    .byte 2
    bar .addr 3
    .if 1 < 2
        baz .byte
    .elseif 1 > 2
        baz .word
    .else
        baz .byte 3
    .endif
.endunion

--------------------------------------------------------------------------------

(source_file
  (union_declaration
    (command)
    name: (identifier)
    body: (block
      (union_struct_member
        name: (identifier)
        size: (storage_allocator))
      (union_struct_member
        size: (storage_allocator))
      (union_struct_member
        size: (storage_allocator)
        multiplier: (decimal_literal))
      (union_struct_member
        name: (identifier)
        size: (storage_allocator)
        multiplier: (decimal_literal))
      (if_statement
        if_type: (command)
        condition: (binary_expression
          left: (decimal_literal)
          operator: (LT)
          right: (decimal_literal))
        body: (block
          (union_struct_member
            name: (identifier)
            size: (storage_allocator)))
        (elseif
          (command)
          condition: (binary_expression
            left: (decimal_literal)
            operator: (GT)
            right: (decimal_literal))
          body: (block
            (union_struct_member
              name: (identifier)
              size: (storage_allocator))))
        (else
          (command)
          body: (block
            (union_struct_member
              name: (identifier)
              size: (storage_allocator)
              multiplier: (decimal_literal))))
        (command)))
    (command)))
