corpus/control-commands/nominal/insular.test
================================================================================
Insular Control-Commands
================================================================================

.a16
.a8
.code
.data
.end
.exitmac
.exitmacro
.i16
.i8
.p02
.p4510
.p816
.pc02
.pdtv
.popcharmap
.popcpu
.popseg
.psc02
.pushcharmap
.pushseg
.reloc
.rodata

.A16
.A8
.CODE
.DATA
.END
.ExitMac
.EXITMAC
.ExitMacro
.EXITMACRO
.I16
.I8
.P02
.P4510
.P816
.PC02
.Pc02
.PDTV
.pdTV
.PdTV
.PdTv
.POPCHARMAP
.PopCharMap
.POPCPU
.PopCPU
.POPSEG
.PopSeg
.PSC02
.Psc02
.PsC02
.PUSHCHARMAP
.PushCharMap
.PUSHSEG
.PushSeg
.RELOC
.RODATA
.RoData

--------------------------------------------------------------------------------

(source_file
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  (nominal_control_command
    name: (command))
  )
