corpus/decimals.txt
================================================================================
decimals
================================================================================


1
12
123
adc #123
adc #123
adc # 123


--------------------------------------------------------------------------------

(source_file
  (decimal)
  (decimal)
  (decimal)
  (instruction
    (mnemonic)
    (immediate_mode
      (decimal)))
  (instruction
    (mnemonic)
    (immediate_mode
      (decimal)))
  (instruction
    (mnemonic)
    (immediate_mode
      (decimal))))
