corpus/expressions/binary
================================================================================
Binary Expressions
================================================================================

tree-sitter-expression-block-start
1 - 1
1 + 1
1 * 1
1 * -1
tree-sitter-expression-block-end

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (decimal_literal)
    (binary_operator)
    (decimal_literal))
  (binary_expression
    (decimal_literal)
    (binary_operator)
    (decimal_literal))
  (binary_expression
    (decimal_literal)
    (binary_operator)
    (decimal_literal))
  (binary_expression
    (decimal_literal)
    (binary_operator)
    (unary_expression
      (unary_operator)
      (decimal_literal))))
