corpus/expressions/unary
================================================================================
unary expressions
================================================================================

tree-sitter-expression-block-start
+1
-1
~1
<1
>1
tree-sitter-expression-block-end

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (unary_operator)
    (decimal_literal))
  (unary_expression
    (unary_operator)
    (decimal_literal))
  (unary_expression
    (unary_operator)
    (decimal_literal))
  (unary_expression
    (unary_operator)
    (decimal_literal))
  (unary_expression
    (unary_operator)
    (decimal_literal)))
